# zobo-app-v0

./: .gitignore  Dockerfile  GOOGLE_OAUTH_SETUP.md  NOTIFICATIONS_GUIDE.md  OAUTH_SETUP.md  VOICE_SETUP_QUICK.md  app.py  auth.py  calendar_demo.md  calendar_service.py  database.py  diagnose.py  pyproject.toml  replit.md  requirements.txt  security_test.py  setup_google_calendar.py  simple_calendar_setup.py  test_db_simple.py  test_persistent_storage.py  test_voice.py  test_voice_simple.py  test_wakeword.html  voice_setup.md
static/css/: custom.css
static/js/: chat.js  notifications.js  sw-notifications.js
templates/: index.html  login.html
