[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "requests>=2.32.4",
    "gunicorn>=23.0.0",
    "google-api-python-client>=2.177.0",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "python-dateutil>=2.9.0.post0",
    "authlib>=1.3.0",
]
